--- a/SAPR.WPF/Views/MainWindow.xaml
+++ b/SAPR.WPF/Views/MainWindow.xaml
@@ -118,8 +118,8 @@
                 </ItemsControl.ItemTemplate>
             </ItemsControl>
         </Canvas>
-        <Button Command="{Binding AddSecondRectanglesCommand}" Content="Добавить доп" Width="100" Height="30" VerticalAlignment="Center" Margin="10" HorizontalAlignment="Right"/>
-        <Button Command="{Binding AddMainRectangleCommand}" Content="Добавить основу" Width="100" Height="30" VerticalAlignment="Center" Margin="10" HorizontalAlignment="Left"/>
+        <Button Command="{Binding AddSecondRectanglesCommand}" Content="Добавить дополнительный" Width="100" Height="30" FontSize="8" VerticalAlignment="Center" Margin="10" HorizontalAlignment="Right"/>
+        <Button Command="{Binding AddMainRectangleCommand}" Content="Добавить основной" Width="100" Height="30" FontSize="8" VerticalAlignment="Center" Margin="10" HorizontalAlignment="Left"/>
         <Button Command="{Binding ResizeMainRectangleCommand}" Content="Очертить второстепенные прямоугольники" Grid.Column="1" Height="30" Width="250" HorizontalAlignment="Left" Margin="20"/>
         <Button Command="{Binding ClearRectanglesCommand}" Content="Удалить прямоугольники" Grid.Column="1" Height="30" Width="250" HorizontalAlignment="Center"/>
     </Grid>
